<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">c:geo</string>
    <string name="cache">Cache</string>
    <string name="detail">Details</string>
    <string name="search">Search</string>
    <string name="helpers">Useful apps</string>
    <string name="about">About c:geo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="settings_titlebar">c:geo Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="all_types">All Cache Types</string>
    <string name="traditional">Traditional Cache</string>
    <string name="multi">Multi-cache</string>
    <string name="mystery">Mystery Cache</string>
    <string name="letterbox">Letterbox Hybrid</string>
    <string name="event">Event Cache</string>
    <string name="mega">Mega-Event Cache</string>
    <string name="giga">Giga-Event Cache</string>
    <string name="earth">Earthcache</string>
    <string name="cito">Cache In Trash Out Event</string>
    <string name="webcam">Webcam Cache</string>
    <string name="virtual">Virtual Cache</string>
    <string name="wherigo">Wherigo Cache</string>
    <string name="lostfound">Lost &amp; Found Event Cache</string>
    <string name="ape">Project APE Cache</string>
    <string name="gchq">Groundspeak HQ</string>
    <string name="gps">GPS Adventures Exhibit</string>
    <string name="block">Groundspeak Block Party</string>
    <string name="unknown">Unknown Type</string>
    <string name="cache_size_micro">Micro</string>
    <string name="cache_size_small">Small</string>
    <string name="cache_size_regular">Regular</string>
    <string name="cache_size_large">Large</string>
    <string name="cache_size_other">Other</string>
    <string name="cache_size_virtual">Virtual</string>
    <string name="cache_size_notchosen">Not chosen</string>
    <string name="cache_size_unknown">Unknown</string>
    <string name="cache_size_nano">Nano</string>
    <string name="cache_size_very_large">Very large</string>
    <string name="wp_final">Final Location</string>
    <string name="wp_stage">Stage of a Multicache</string>
    <string name="wp_puzzle">Question to Answer</string>
    <string name="wp_pkg">Parking Area</string>
    <string name="wp_trailhead">Trailhead</string>
    <string name="wp_waypoint">Reference Point</string>
    <string name="wp_original">Original Coordinates</string>
    <string name="log_found">Found it</string>
    <string name="log_dnf">Didn\'t find it</string>
    <string name="log_note">Write note</string>
    <string name="log_published">Published</string>
    <string name="log_enabled">Enabled</string>
    <string name="log_disabled">Disabled</string>
    <string name="log_attend">Will Attend</string>
    <string name="log_attended">Attended</string>
    <string name="log_retrieved">Retrieved</string>
    <string name="log_placed">Placed</string>
    <string name="log_grabbed">Grabbed Somewhere</string>
    <string name="log_movecollection">Move to Collection</string>
    <string name="log_moveinventory">Move to Inventory</string>
    <string name="log_maintained">Maintenance Performed</string>
    <string name="log_maintenance_needed">Needs Maintenance</string>
    <string name="log_update">Updated Coordinates</string>
    <string name="log_archived">Archived</string>
    <string name="log_unarchived">Unarchived</string>
    <string name="log_needs_archived">Needs Archived</string>
    <string name="log_discovered">Discovered</string>
    <string name="log_reviewer">Review Note</string>
    <string name="log_submit_for_review">Submit for Review</string>
    <string name="log_retractlisting">Retract Listing</string>
    <string name="log_marked_missing">Marked Missing</string>
    <string name="log_tb_nothing">Do Nothing</string>
    <string name="log_tb_visit">Visited</string>
    <string name="log_tb_drop">Dropped Off</string>
    <string name="log_tb_changeall">Change All</string>
    <string name="log_save">Save</string>
    <string name="log_saving">Sending log…</string>
    <string name="log_saving_and_uploading">Sending log and uploading image…</string>
    <string name="log_clear">Clear</string>
    <string name="log_post">Submit Log</string>
    <string name="log_post_not_possible">Loading Log Page…</string>
    <string name="log_add">Add</string>
    <string name="log_no_rating">No rating</string>
    <string name="log_stars_1_description">Poor</string>
    <string name="log_stars_15_description">Fairly poor</string>
    <string name="log_stars_2_description">Below average</string>
    <string name="log_stars_25_description">Not so bad</string>
    <string name="log_stars_3_description">Average</string>
    <string name="log_stars_35_description">Not bad at all</string>
    <string name="log_stars_4_description">Better than average</string>
    <string name="log_stars_45_description">Very good</string>
    <string name="log_stars_5_description">Awesome</string>
    <string name="log_webcam">Webcam Photo Taken</string>
    <string name="log_new_log">Log</string>
    <string name="log_new_log_text">Log Text</string>
    <string name="log_announcement">Announcement</string>
    <string name="log_today">Today</string>
    <string name="log_yesterday">Yesterday</string>
    <string name="log_smilies">Smilies</string>
    <string name="log_image">Image</string>
    <string name="log_image_attach">Attach Image</string>
    <string name="log_image_stored">Existing</string>
    <string name="log_image_camera">New</string>
    <string name="log_image_caption">Caption</string>
    <string name="log_image_description">Description</string>
    <string name="log_image_scale">Scaling</string>
    <string name="log_password_title">Log Password:</string>
    <string name="log_hint_log_password">Enter your log password</string>
    <string name="log_oc_team_comment">OC Team comment</string>
    <string-array name="log_image_scales">
        <item>No scaling</item>
        <item>512 px</item>
        <item>640 px</item>
        <item>800 px</item>
        <item>1024 px</item>
    </string-array>
    <string name="translate_to_sys_lang">Translate to %s</string>
    <string name="translate_to_english">Translate to English</string>
    <string name="translate_length_warning">Translation may fail with a large amount of text.</string>
    <string name="err_none">OK</string>
    <string name="err_parse">Failed Login page parsing</string>
    <string name="err_server">Unable to contact Geocaching.com. The website may be down or your internet connection not working.</string>
    <string name="err_server_ec">Unable to contact Extremcaching.com. The website may be down or your internet connection not working.</string>
    <string name="err_login">No Login information stored</string>
    <string name="err_login_failed_toast">c:geo can\'t log in. c:geo works offline with Stored caches. Check Login settings or enable your internet connection.</string>
    <string name="err_unknown">Unknown error</string>
    <string name="err_comm">Unknown communication error</string>
    <string name="err_missing_auth">No username and/or password set.</string>
    <string name="err_wrong">Login information incorrect</string>
    <string name="err_maintenance">Geocaching.com is down for maintenance. c:geo works offline with Stored caches.</string>
    <string name="err_license">You have not agreed to the Geocaching.com license agreement, so c:geo can\'t load cache coordinates.</string>
    <string name="err_unvalidated_account">You must validate your account on the Geocaching.com website first.</string>
    <string name="err_unpublished">The requested cache is unpublished.</string>
    <string name="err_premium_only">This Cache is only available to Geocaching.com Premium Members.</string>
    <string name="err_detail_open">c:geo can\'t open geocache details.</string>
    <string name="err_detail_cache">c:geo can\'t display the geocache you want. Is it really a geocache?</string>
    <string name="err_detail_cache_find">c:geo can\'t find geocache</string>
    <string name="err_detail_cache_find_some">c:geo can\'t find that geocache.</string>
    <string name="err_detail_cache_find_any">c:geo can\'t find any geocaches.</string>
    <string name="err_detail_google_maps_limit_reached">c:geo failed to download static maps. Maybe the Google Maps API limit was reached.</string>
    <string name="err_detail_no_spoiler">c:geo found no spoiler images for this cache.</string>
    <string name="err_detail_no_map_static">c:geo found no static maps for this cache.</string>
    <string name="err_detail_not_load_map_static">c:geo failed to load static maps.</string>
    <string name="err_detail_still_working">Still working on another task.</string>
    <string name="err_watchlist_still_managing">Still managing your watchlist.</string>
    <string name="err_watchlist_failed">Changing your watchlist failed.</string>
    <string name="err_application_no">c:geo can\'t find any suitable application.</string>
    <string name="err_auth_initialize">c:geo failed to initialize authorization process.</string>
    <string name="err_auth_process">Authorization process failed.</string>
    <string name="err_cannot_log_visit">c:geo is unable to log your visit. Please log your visit from the full cache details screen.</string>
    <string name="err_download_fail">c:geo failed to download caches.</string>
    <string name="err_dwld_details_failed">c:geo failed to download cache details.</string>
    <string name="err_load_descr_failed">c:geo can\'t load description.</string>
    <string name="err_location_unknown">c:geo doesn\'t know location of cache.</string>
    <string name="err_missing_device_name">Please enter a device name before registering.</string>
    <string name="err_favorite_failed">Changing favorite status failed.</string>
    <string name="err_select_logimage_failed">Selecting an image for the log failed.</string>
    <string name="err_acquire_image_failed">Acquiring an image failed.</string>
    <string name="err_tb_display">c:geo can\'t display the trackable you want. Is it really a trackable?</string>
    <string name="err_tb_details_open">c:geo can\'t open trackable details.</string>
    <string name="err_tb_forgot_saw">c:geo forgot which trackable you saw.</string>
    <string name="err_tb_find">c:geo can\'t find trackable</string>
    <string name="err_tb_find_that">c:geo can\'t find that trackable.</string>
    <string name="err_waypoint_cache_unknown">c:geo doesn\'t know to which cache you want to add a waypoint for.</string>
    <string name="err_waypoint_add_failed">c:geo failed to add your waypoint.</string>
    <string name="err_point_unknown_position">c:geo can\'t recognize where you are.</string>
    <string name="err_point_no_position_given_title">Info required</string>
    <string name="err_point_no_position_given">Fill at least latitude and longitude or distance and bearing. You can also fill all four fields.</string>
    <string name="caches_filter_popularity">Favorites</string>
    <string name="cache_status">Status</string>
    <string name="cache_geocode">Geo code</string>
    <string name="cache_name">Name</string>
    <string name="cache_type">Type</string>
    <string name="cache_size">Size</string>
    <string name="cache_distance">Distance</string>
    <string name="cache_difficulty">Difficulty</string>
    <string name="cache_terrain">Terrain</string>
    <string name="cache_rating">Rating</string>
    <string name="cache_own_rating">Your Rating</string>
    <string name="cache_favorite">Favorite</string>
    <string name="cache_owner">Owner</string>
    <string name="cache_hidden">Hidden</string>
    <string name="cache_location">Location</string>
    <string name="cache_coordinates">Coordinates</string>
</resources>