<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/labelTerrainFrom"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".filter.FilterActivity" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/terrainLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache_terrain"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/terrainMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0" />

            <SeekBar
                android:id="@+id/terrainMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0" />

            <TextView
                android:id="@+id/difficultyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache_difficulty"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/difficultyMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0" />

            <SeekBar
                android:id="@+id/difficultyMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="0" />

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache_distance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/distanceMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <SeekBar
                android:id="@+id/distanceMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <TextView
                android:id="@+id/favoritesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caches_filter_popularity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/favoritesMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />

            <SeekBar
                android:id="@+id/favoritesMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="0" />
        </LinearLayout>
    </ScrollView>

    <ExpandableListView
        android:id="@+id/filterList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ExpandableListView>

</LinearLayout>